# aml-knowledge-copilot

./: .env.example  .gitignore  Dockerfile  Dockerfile.frontend  README.md  docker-compose.yml  mypy.ini  pyproject.toml  pyrightconfig.json  requirements.txt
.github/workflows/: ci.yml
backend/: Dockerfile  __init__.py
backend/app/: __init__.py  main.py
backend/app/api/routes/: documents.py  health.py  query.py
backend/app/core/: __init__.py  config.py  prompts.py
backend/app/infra/: __init__.py
backend/app/infra/llm/: __init__.py  gemma_client.py  llm_client.py
backend/app/infra/vector/: __init__.py  qdrant_client.py
backend/app/services/: __init__.py
backend/app/services/answer/: __init__.py  answer_service.py
backend/app/services/document/: __init__.py  document_service.py
backend/app/services/retrieval/: __init__.py  retrieval_service.py
data/eval/: aml_eval.jsonl
frontend/: Dockerfile  streamlit_app.py
scripts/: eval_rag.py  ingest_demo_data.py
tests/: test_basic.py
